news slider component finished

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -374,6 +374,42 @@
       justify-content: center;
     }
   }
+  .news_section {
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .news_wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 48px;
+      .news_header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 24px;
+        h1 {
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 40px;
+          line-height: 140%;
+          color: #1d2130;
+          margin-bottom: 0;
+        }
+        .empty_line {
+          width: calc(100% - 300px);
+          height: 1px;
+          background: #e5e5e5;
+        }
+      }
+      .news_info {
+        width: 100%;
+      }
+    }
+  }
 }
 @media (max-width: 1550px) {
   .home_page {
@@ -395,6 +431,10 @@
     }
     .join_team_section {
       padding: 96px 25px;
+    }
+    .news_section {
+      padding: 0 25px;
+      padding-bottom: 96px;
     }
   }
 }
@@ -564,6 +604,10 @@
   }
   .home_page .join_team_section {
     padding: 85px 20px;
+  }
+  .home_page .news_section {
+    padding: 85px 20px;
+    padding-top: 0;
   }
 }
 @media (max-width: 950px) {
@@ -755,6 +799,13 @@
   .home_page .join_team_section .join_team_wrapper {
     height: 320px;
   }
+  .home_page .news_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .home_page .news_section .news_wrapper .news_header h1 {
+    font-size: 35px;
+  }
 }
 @media (max-width: 700px) {
   .home_page {
@@ -826,6 +877,19 @@
   .home_page .join_team_section {
     padding: 55px 10px;
   }
+  .home_page .news_section .news_wrapper {
+    gap: 20px;
+  }
+  .home_page .news_section .news_wrapper .news_header {
+    gap: 15px;
+  }
+  .home_page .news_section .news_wrapper .news_header .empty_line {
+    width: calc(100% - 260px);
+  }
+  .home_page .news_section {
+    padding: 55px 10px;
+    padding-top: 20px;
+  }
 }
 @media (max-width: 550px) {
   .home_page .what_we_do_section .what_we_do_wrapper .what_we_do_img {
@@ -844,6 +908,15 @@
   }
   .home_page .join_team_section .join_team_wrapper {
     height: 280px;
+  }
+  .home_page .news_section .news_wrapper .news_header .empty_line {
+    display: none;
+  }
+  .home_page .news_section .news_wrapper .news_header h1 {
+    width: 100%;
+  }
+  .home_page .news_section .news_wrapper .news_header {
+    gap: 0px;
   }
 }
 @media (max-width: 400px) {
@@ -965,6 +1038,15 @@
     .chart_percents
     .chart_percent {
     width: 100%;
+  }
+  .home_page .news_section .news_wrapper .news_header h1 {
+    text-align: center;
+    line-height: 110%;
+    font-size: 30px;
+  }
+  .for_slider .slick-slide > div .news_card .card_wrapper .card_body a {
+    text-align: center;
+    line-height: 110%;
   }
 }
 @media (max-width: 350px) {
