--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -410,6 +410,14 @@
       }
     }
   }
+  .events_section {
+    width: 100%;
+    padding: 0 calc((100% - 1500px) / 2);
+    padding-bottom: 96px;
+    .events_wrapper {
+      width: 100%;
+    }
+  }
 }
 @media (max-width: 1550px) {
   .home_page {
@@ -433,6 +441,10 @@
       padding: 96px 25px;
     }
     .news_section {
+      padding: 0 25px;
+      padding-bottom: 96px;
+    }
+    .events_section {
       padding: 0 25px;
       padding-bottom: 96px;
     }
@@ -606,6 +618,10 @@
     padding: 85px 20px;
   }
   .home_page .news_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .home_page .events_section {
     padding: 85px 20px;
     padding-top: 0;
   }
@@ -806,6 +822,10 @@
   .home_page .news_section .news_wrapper .news_header h1 {
     font-size: 35px;
   }
+  .home_page .events_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 700px) {
   .home_page {
@@ -889,6 +909,10 @@
   .home_page .news_section {
     padding: 55px 10px;
     padding-top: 20px;
+  }
+  .home_page .events_section {
+    padding: 55px 10px;
+    padding-top: 0;
   }
 }
 @media (max-width: 550px) {
